--- a/fhlanding.html
+++ b/fhlanding.html
@@ -4,7 +4,7 @@
 	<title>Fridge Hero</title>
 	<meta property="og:url"           content="https://www.limpingturtle.com/fhlanding.html" />
 	<meta property="og:type"          content="website" />
-	<meta property="og:title"         content="Be a Fridge Hero!" />
+	<meta property="og:title"         content="Fridge Hero Free App - Save Food & Money" />
 	<meta property="og:description"   content="Stop wasting food and money! Easily keep track of the food in your fridge." />
 	<meta property="og:image"         content="https://www.limpingturtle.com/fhlogo.png" />
 </head>
