Add Google Play Link

--- a/fhlanding.html
+++ b/fhlanding.html
@@ -5,10 +5,10 @@
 	<meta property="og:url"           content="https://www.limpingturtle.com/fhlanding.html" />
 	<meta property="og:type"          content="website" />
 	<meta property="og:title"         content="Fridge Hero Free App - Save Food & Money" />
-	<meta property="og:description"   content="Stop wasting food and money! Easily keep track of the food in your fridge." />
+	<meta property="og:description"   content="Become a Fridge Hero! Stop wasting food and money. Easily keep track of the food in your fridge with Fridge Hero Free!" />
 	<meta property="og:image"         content="https://www.limpingturtle.com/fhlogo.png" />
 </head>
 <body>
-Get on Google Play and App Store
+<a href='https://play.google.com/store/apps/details?id=com.hero.fridge&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'><img alt='Get it on Google Play' src='https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png'/></a>
 </body>
 </html>
