--- a/fhlanding.html
+++ b/fhlanding.html
@@ -9,8 +9,8 @@
 	<meta property="og:image"         content="https://www.limpingturtle.com/fhlogo.png" />
 </head>
 <body>
-<a href='https://play.google.com/store/apps/details?id=com.hero.fridge&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1' style="display:inline-block;no-repeat;height:40px;"><img alt='Get it on Google Play' src='https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png'/></a>
+<a href='https://play.google.com/store/apps/details?id=com.hero.fridge&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'><img alt='Get it on Google Play' src='https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png' style="height:60px;"/></a>
 
-<a href="https://itunes.apple.com/us/app/fridge-hero/id" style="display:inline-block;overflow:hidden;background:url(https://linkmaker.itunes.apple.com/en-us/badge-lrg.svg?releaseDate=2012-12-13&kind=iossoftware&bubble=ios_apps) no-repeat;width:135px;height:40px;"></a>
+<a href="https://itunes.apple.com/us/app/fridge-hero/id" style="display:inline-block;overflow:hidden;background:url(https://linkmaker.itunes.apple.com/en-us/badge-lrg.svg?releaseDate=2012-12-13&kind=iossoftware&bubble=ios_apps) no-repeat;width:135px;height:40px;margin:10px 0px;"></a>
 </body>
 </html>
