--- a/fhlanding.html
+++ b/fhlanding.html
@@ -4,15 +4,18 @@
 		<title>Fridge Hero</title>
 		<meta property="og:url"           content="https://www.limpingturtle.com/fhlanding.html" />
 		<meta property="og:type"          content="website" />
+		<meta property="og:site_name"		 content="Fridge Hero" />
 		<meta property="og:title"         content="Fridge Hero Free App - Save Food & Money" />
 		<meta property="og:description"   content="Become a Fridge Hero! Stop wasting food and money. Easily keep track of the food in your fridge with Fridge Hero Free!" />
 		<meta property="og:image"         content="https://www.limpingturtle.com/fhlogo.png" />
+		<!-- <meta http-equiv="refresh" content="0; url=http://...">
+		<link rel="canonical" href="http://..." /> -->
 	</head>
 	<body>
 		<div>
 			<img src="https://www.limpingturtle.com/fhlogo.png" width="285" />
 		</div>
-		<div style="padding-left: 5px">
+		<div>
 			<a href="https://itunes.apple.com/us/app/fridge-hero/id" style="display:inline-block;overflow:hidden;background:url(https://linkmaker.itunes.apple.com/en-us/badge-lrg.svg?releaseDate=2012-12-13&kind=iossoftware&bubble=ios_apps) no-repeat;width:135px;height:40px;margin:10px 0px;">
 			</a>
 			<a href='https://play.google.com/store/apps/details?id=com.hero.fridge&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'><img alt='Get it on Google Play' src='https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png' height="60" /></a>
