--- a/fhlanding.html
+++ b/fhlanding.html
@@ -7,7 +7,7 @@
 		<meta property="og:site_name"		 content="Fridge Hero" />
 		<meta property="og:title"         content="Fridge Hero Free App - Save Food & Money" />
 		<meta property="og:description"   content="Become a Fridge Hero! Stop wasting food and money. Easily keep track of the food in your fridge with Fridge Hero Free!" />
-		<meta property="og:image"         content="https://www.limpingturtle.com/fhlogo.png" />
+		<meta property="og:image"         content="https://www.limpingturtle.com/shareimg.png" />
 		<!-- <meta http-equiv="refresh" content="0; url=http://...">
 		<link rel="canonical" href="http://..." /> -->
 	</head>
