--- a/fhlanding.html
+++ b/fhlanding.html
@@ -11,11 +11,11 @@
 		<!-- <meta http-equiv="refresh" content="0; url=http://...">
 		<link rel="canonical" href="http://..." /> -->
 	</head>
-	<body>
-		<div>
-			<img src="https://www.limpingturtle.com/fhlogo.png" width="285" />
+	<body style="background-color: #4096e4">
+		<div style="text-align: center;">
+			<img src="feature.png" height="285" />
 		</div>
-		<div>
+		<div style="text-align: center;">
 			<a href="https://itunes.apple.com/us/app/fridge-hero/id" style="display:inline-block;overflow:hidden;background:url(https://linkmaker.itunes.apple.com/en-us/badge-lrg.svg?releaseDate=2012-12-13&kind=iossoftware&bubble=ios_apps) no-repeat;width:135px;height:40px;margin:10px 0px;">
 			</a>
 			<a href='https://play.google.com/store/apps/details?id=com.hero.fridge&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'><img alt='Get it on Google Play' src='https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png' height="60" /></a>
