--- a/fhlanding.html
+++ b/fhlanding.html
@@ -5,8 +5,8 @@
 		<meta property="og:url"           content="https://www.limpingturtle.com/fhlanding.html" />
 		<meta property="og:type"          content="website" />
 		<meta property="og:site_name"		 content="Fridge Hero" />
-		<meta property="og:title"         content="Fridge Hero Free App - Save Food & Money" />
-		<meta property="og:description"   content="Become a Fridge Hero! Stop wasting food and money. Easily keep track of the food in your fridge with Fridge Hero Free!" />
+		<meta property="og:title"         content="Fridge Hero – food tracking made easy" />
+		<meta property="og:description"   content="Get the app! Easily organize the food in your fridge. Eat smarter. Save money. Waste less." />
 		<meta property="og:image"         content="https://www.limpingturtle.com/shareimg.png" />
 		<!-- <meta http-equiv="refresh" content="0; url=http://...">
 		<link rel="canonical" href="http://..." /> -->
