--- a/fhlanding.html
+++ b/fhlanding.html
@@ -6,7 +6,7 @@
 		<meta property="og:type"          content="website" />
 		<meta property="og:site_name"		 content="Fridge Hero" />
 		<meta property="og:title"         content="Fridge Hero – food tracking made easy" />
-		<meta property="og:description"   content="Get the app! Easily organize the food in your fridge. Eat smarter. Save money. Waste less." />
+		<meta property="og:description"   content="Easily organize the food in your fridge. Eat smarter. Save money. Waste less." />
 		<meta property="og:image"         content="https://www.limpingturtle.com/shareimg.png" />
 		<!-- <meta http-equiv="refresh" content="0; url=http://...">
 		<link rel="canonical" href="http://..." /> -->
