--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 	<title>Limping Turtle Apps</title>
+	<meta http-equiv="refresh" content="0; url=https://www.limpingturtle.com/fhlanding.html">
+	<link rel="canonical" href="https://www.limpingturtle.com/fhlanding.html" />
 </head>
 <body>
 
