--- a/fhlanding.html
+++ b/fhlanding.html
@@ -11,16 +11,64 @@
 		<!-- <meta http-equiv="refresh" content="0; url=http://...">
 		<link rel="canonical" href="http://..." /> -->
 	</head>
-	<body style="background-color: #4096e4">
-		<div style="text-align: center;">
-			<img src="feature.png" style="max-height:285px; max-width:100%" />
+	<body>
+		<style>
+			body {
+				background-color: #4096e4;
+			}
+			div {
+				text-align: center;
+			}
+			.ios-button {
+				display:inline-block;
+				overflow:hidden;
+				background:url(https://linkmaker.itunes.apple.com/en-us/badge-lrg.svg?releaseDate=2012-12-13&kind=iossoftware&bubble=ios_apps) no-repeat;
+				width:135px;
+				height:40px;
+				margin:10px 0px;
+			}
+			.iosButton {
+				width:135px;
+				height:40px;
+				margin:10px 0px;
+			}
+			.feature{
+				max-height:285px; 
+				max-width:100%
+			}
+			a{
+			   text-decoration: none;
+			}
+			@media only screen and (max-width: 600px) {
+			  .ios-button {
+				  	
+			  }
+			  .iosButton {
+				  	width:35%;
+					height: auto;
+					margin:2.54% 0px;
+			  }
+			  .buttons {
+					width:40%;
+					height: auto;
+				}
+				span {
+					font-size: 60%;
+				}
+			}
+		</style>
+		<div>
+			<img src="feature.png" class="feature"/>
 		</div>
-		<div style="text-align: center;">
-			<a href="https://itunes.apple.com/app/fridge-hero/id1462463253" style="display:inline-block;overflow:hidden;background:url(https://linkmaker.itunes.apple.com/en-us/badge-lrg.svg?releaseDate=2012-12-13&kind=iossoftware&bubble=ios_apps) no-repeat;width:135px;height:40px;margin:10px 0px;">
+		<div>
+			<a href="https://itunes.apple.com/app/fridge-hero/id1462463253">
+				<img class="iosButton" alt='Download it on the App store' src='https://linkmaker.itunes.apple.com/en-us/badge-lrg.svg?releaseDate=2012-12-13&kind=iossoftware&bubble=ios_apps' height="40px" />
 			</a>
-			<a href='https://play.google.com/store/apps/details?id=com.hero.fridge&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'><img alt='Get it on Google Play' src='https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png' height="60" /></a>
+			<a href='https://play.google.com/store/apps/details?id=com.hero.fridge&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'>
+				<img class="buttons" alt='Get it on Google Play' src='https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png' height="60" />
+			</a>
 		</div>
-		<div style="text-align: center;">
+		<div>
 			<span style="color:white;padding-right:58px">Coming Soon!</span><span style="color:white;opacity:1;padding-right:14px">Coming Soon!</span>
 		</div>
 	</body>
