--- a/fhlanding.html
+++ b/fhlanding.html
@@ -39,7 +39,7 @@
 			a{
 			   text-decoration: none;
 			}
-			@media only screen and (max-width: 600px) {
+			@media screen and (max-width: 600px) {
 			  .ios-button {
 				  	
 			  }
