--- a/fhlanding.html
+++ b/fhlanding.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>Fridge Hero</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta property="og:url"           content="https://www.limpingturtle.com/fhlanding.html" />
 		<meta property="og:type"          content="website" />
 		<meta property="og:site_name"		 content="Fridge Hero" />
