--- a/fhlanding.html
+++ b/fhlanding.html
@@ -26,13 +26,13 @@
 				if (os == "Android") {
 				  window.location.href = "https://play.google.com/store/apps/details?id=com.hero.fridge"; 
 				} else if (os == "iOS") {
-				  window.location.href = "https://itunes.apple.com/app/fridge-hero/id1462463253";
+				  window.location.href = "https://itunes.apple.com/app/id1462463253";
 				// } else if (os == "Windows Phone") {
 				  // window.location.href = "http://www.WindowsPhoneexample.com";
 				} else {
 				// do nothing - may be facebook crawler or desktop
 				}
-			}
+			}()
 		</script>
 		<meta property="og:url"           content="https://www.limpingturtle.com/fhlanding.html" />
 		<meta property="og:type"          content="website" />
@@ -95,7 +95,7 @@
 			<img src="feature.png" class="feature"/>
 		</div>
 		<div>
-			<a href="https://itunes.apple.com/app/fridge-hero/id1462463253">
+			<a href="https://itunes.apple.com/app/id1462463253">
 				<img class="iosButton" alt='Download it on the App store' src='https://linkmaker.itunes.apple.com/en-us/badge-lrg.svg?releaseDate=2012-12-13&kind=iossoftware&bubble=ios_apps' height="40px" />
 			</a>
 			<a href='https://play.google.com/store/apps/details?id=com.hero.fridge&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'>
