--- a/fhlanding.html
+++ b/fhlanding.html
@@ -37,7 +37,7 @@
 		<meta property="og:url"           content="https://www.limpingturtle.com/fhlanding.html" />
 		<meta property="og:type"          content="website" />
 		<meta property="og:site_name"		 content="Fridge Hero" />
-		<meta property="og:title"         content="Fridge Hero – food tracking made easy" />
+		<meta property="og:title"         content="Fridge Hero – Track Food Leftovers and Groceries" />
 		<meta property="og:description"   content="Easily organize the food in your fridge. Eat smarter. Save money. Waste less." />
 		<meta property="og:image"         content="https://www.limpingturtle.com/fbshare.png" />
 		<meta name="twitter:card" 			 content="summary_large_image" />
