--- a/fhsupport.html
+++ b/fhsupport.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Fridge Hero Support</title>
+	<link rel="shortcut icon" type="image/png" href="/favicon.png"/>
 </head>
 <body>
 Contact <a href="mailto:limpingt@gmail.com">limpingt@gmail.com</a>
