--- a/fhlanding.html
+++ b/fhlanding.html
@@ -44,6 +44,7 @@
 		<!-- You could set url with something like: <script>document.write(someFunction());</script> -->
 		<!-- <meta http-equiv="refresh" content="0; url=http://...">
 		<link rel="canonical" href="http://..." /> -->
+		<link rel="shortcut icon" type="image/png" href="/favicon.png"/>
 	</head>
 	<!-- <body onload="DetectAndServe()"> //Rather add () to end of script-->
 	<body>
