--- a/fhprivacy.html
+++ b/fhprivacy.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Fridge Hero</title>
+	<link rel="shortcut icon" type="image/png" href="/favicon.png"/>
 </head>
 <body>
 <h1 id="privacy-policy">Privacy Policy</h1>
