--- a/fhprivacy.html
+++ b/fhprivacy.html
@@ -20,7 +20,7 @@
 
 <p>The app does use third party services that may collect information used to identify you.</p>
 
-<p>Link to privacy policy of third party service providers used by the app</p>
+<!-- <p>Link to privacy policy of third party service providers used by the app</p> -->
 
 <h2 id="log-data">Log Data</h2>
 
