--- a/fblanding.html
+++ b/fblanding.html
@@ -34,7 +34,7 @@
 				}
 			})()
 		</script>
-		<meta property="og:url"           content="https://www.limpingturtle.com/fhlanding.html" />
+		<meta property="og:url"           content="https://www.limpingturtle.com/fblanding.html" />
 		<meta property="og:type"          content="website" />
 		<meta property="og:site_name"		 content="Fridge Hero" />
 		<meta property="og:title"         content="Fridge Hero – Track Food Leftovers and Groceries" />
