--- a/fblanding.html
+++ b/fblanding.html
@@ -24,7 +24,7 @@
 			(function DetectAndServe(){
 				var os = getMobileOperatingSystem();
 				if (os == "Android") {
-				  window.location.href = "https://play.app.goo.gl/?link=https://play.google.com/store/apps/details?id=com.hero.fridge&ddl=1&pcampaignid=web_ddl_1"; 
+				  window.location.href = "https://play.app.goo.gl/?link=https://play.google.com/store/apps/details?id=com.hero.fridge&ddl=1&pcampaignid=ddl_1"; 
 				} else if (os == "iOS") {
 				  window.location.href = "https://itunes.apple.com/app/id1462463253";
 				// } else if (os == "Windows Phone") {
