--- a/fhlanding.html
+++ b/fhlanding.html
@@ -24,7 +24,7 @@
 			(function DetectAndServe(){
 				var os = getMobileOperatingSystem();
 				if (os == "Android") {
-				  window.location.href = "https://play.app.goo.gl/?link=https://play.google.com/store/apps/details?id=com.hero.fridge&ddl=1&pcampaignid=web_ddl_1"; 
+				  window.location.href = "https://play.app.goo.gl/?link=https://play.google.com/store/apps/details?id=com.hero.fridge&ddl=1&pcampaignid=ddl_1"; 
 				} else if (os == "iOS") {
 				  window.location.href = "https://itunes.apple.com/app/id1462463253";
 				// } else if (os == "Windows Phone") {
@@ -100,7 +100,7 @@
 			<a href="https://itunes.apple.com/app/id1462463253">
 				<img class="iosButton" alt='Download it on the App store' src='https://linkmaker.itunes.apple.com/en-us/badge-lrg.svg?releaseDate=2012-12-13&kind=iossoftware&bubble=ios_apps' height="40px" />
 			</a>
-			<a href='https://play.app.goo.gl/?link=https://play.google.com/store/apps/details?id=com.hero.fridge&ddl=1&pcampaignid=web_ddl_1'>
+			<a href='https://play.app.goo.gl/?link=https://play.google.com/store/apps/details?id=com.hero.fridge&ddl=1&pcampaignid=ddl_1'>
 				<img class="buttons" alt='Get it on Google Play' src='https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png' height="60" />
 			</a>
 		</div>
