--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 	<title>Limping Turtle Apps</title>
 	<link rel="shortcut icon" type="image/png" href="/favicon.png"/>
-	<meta http-equiv="refresh" content="0; url=https://www.limpingturtle.com/fhlanding.html">
-	<link rel="canonical" href="https://www.limpingturtle.com/fhlanding.html" />
+	<meta http-equiv="refresh" content="0; url=https://www.limpingturtle.com/smlanding.html">
+	<link rel="canonical" href="https://www.limpingturtle.com/smlanding.html" />
 </head>
 <body>
 
