--- a/smlanding.html
+++ b/smlanding.html
@@ -58,7 +58,7 @@
 			.ios-button {
 				display:inline-block;
 				overflow:hidden;
-				background:url(https://linkmaker.itunes.apple.com/en-us/badge-lrg.svg?releaseDate=2012-12-13&kind=iossoftware&bubble=ios_apps) no-repeat;
+				background:url(appstore-badge.png) no-repeat;
 				width:135px;
 				height:40px;
 				margin:10px 0px;
