--- a/smlanding.html
+++ b/smlanding.html
@@ -58,7 +58,7 @@
 			.ios-button {
 				display:inline-block;
 				overflow:hidden;
-				background:url(appstore-badge.png) no-repeat;
+				background:url(appstore-badge.svg) no-repeat;
 				width:135px;
 				height:40px;
 				margin:10px 0px;
