--- a/smlanding.html
+++ b/smlanding.html
@@ -36,7 +36,7 @@
 </script>
 <meta property="og:url"           content="https://www.limpingturtle.com/smlanding.html" />
 <meta property="og:type"          content="website" />
-<meta property="og:site_name"		 content="Fridge Hero" />
+<meta property="og:site_name"	  content="Fridge Hero" />
 <meta property="og:title"         content="Fridge Hero: Track Food Leftovers and Groceries" />
 <meta property="og:description"   content="Easily organize the food in your fridge. Eat smarter. Save money. Waste less." />
 <meta property="og:image"         content="https://www.limpingturtle.com/fbshare.png" />
@@ -98,7 +98,7 @@
 </div>
 <div>
 <a href="https://itunes.apple.com/app/id1462463253">
-<img class="iosButton" alt='Download it on the App store' src='https://linkmaker.itunes.apple.com/en-us/badge-lrg.svg?releaseDate=2012-12-13&kind=iossoftware&bubble=ios_apps' height="40px" />
+<img class="iosButton" alt='Download it on the App store' src='appstore-badge.svg' height="40px" />
 </a>
 <a href='https://play.app.goo.gl/?link=https://play.google.com/store/apps/details?id=com.hero.fridge&ddl=1&pcampaignid=ddl_1'>
 <img class="buttons" alt='Get it on Google Play' src='https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png' height="60" />
