--- a/mhsupport.html
+++ b/mhsupport.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<title>Mouse House Support</title>
-	<link rel="shortcut icon" type="image/png" href="/favicon.png"/>
+    <meta charset="UTF-8">
+    <meta http-equiv="refresh" content="0; URL='https://www.limpingturtle.com/support.html'" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Support</title>
 </head>
 <body>
-Contact <a href="mailto:limpingt@gmail.com">limpingt@gmail.com</a>
+    
 </body>
 </html>
