fix contact link

--- a/privacy.html
+++ b/privacy.html
@@ -82,8 +82,8 @@ We want to inform users of this Service that these third parties have access to 
                         // This code is freeware provided these four comment lines remain intact
                         // A wizard to generate this code is at http://www.jottings.com/obfuscator/
                         // https://web.archive.org/web/20210101010938/http://www.jottings.com/obfuscator/
-                        { coded = "mTZEjmE@UjZEj9PlTqEDjzP.mj"
-                          key = "JEy4Io6SDn3becNzWuK9ivs8OHaxfXCTQY5ZBtPmVMh2w7AUlGRrj1qgpL0dkF"
+                        { coded = coded = "WE62Efub@u6kEW.PU6"
+                          key = "1RiXc80sQtf7YNUSW5yKEdPLj9wbpIqzxmvFrDgVCaBJOG2e4ZT6Mhn3uHoklA"
                           shift=coded.length
                           link=""
                           for (i=0; i<coded.length; i++) {
