--- a/support.html
+++ b/support.html
@@ -23,7 +23,7 @@
         <div data-collapse="medium" data-animation="default" data-duration="400" data-doc-height="1" class="nav w-nav">
             <div class="nav-inner">
                 <div class="nav-logo-wrap">
-                    <a href="https://limpingturtle.com/" class="brand w-nav-brand"><img src="./template/logo189.png" width="120" alt="" /></a>
+                    <a href="https://www.limpingturtle.com/" class="brand w-nav-brand"><img src="./template/logo189.png" width="120" alt="" /></a>
                 </div>
             </div>
             <div class="w-nav-overlay" data-wf-ignore=""></div>
@@ -38,7 +38,7 @@
         </div>
         <div>
             <div class="button-wrap">
-                <!-- <a href="http://limpingturtle.com/" class="button w-button">Download Now</a> -->
+                <!-- <a href="http://www.limpingturtle.com/" class="button w-button">Download Now</a> -->
                 <script type="text/javascript" language="javascript">
                     // Email obfuscator script 2.1 by Tim Williams, University of Arizona
                     // Random encryption key feature coded by Andrew Moulden
@@ -62,7 +62,7 @@
                     document.write("<a href='mailto:"+link+"' class='button contact w-button'>Email Us</a>")
                     }
                 </script>
-                <!-- <a href="https://limpingturtle.com/" class="button contact w-button">Get in Touch</a> -->
+                <!-- <a href="https://www.limpingturtle.com/" class="button contact w-button">Get in Touch</a> -->
             </div>
         </div>
     </div>
