--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             </div>
         </div> -->
         <div class="section" id="apps">
-            <!-- <div id="features" class="feature-wrap">
+            <div id="features" class="feature-wrap">
                 <div
                     data-w-id="4593c4b7-56e8-060a-be57-648b0e08fc65"
                     style="transform: translate3d(0px, 40px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); opacity: 0; transform-style: preserve-3d;"
@@ -101,10 +101,23 @@
                 >
                     <div class="title">Run your Events</div>
                     <h2 class="black">Event Ticket Hero</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.</p>
+                    <p>
+                        Send tickets to attendees and scan barcodes at the door. 
+                    </p>
+                    <p>
+                        Managing your small event has never been easier! Whether it’s a concert, or private event, be the Event Ticket Hero!
+                    </p>
+                    <div>            
+                        <a href="https://itunes.apple.com/app/id1618824771" style="text-decoration: none;">
+                            <img class="iosButton" alt="Download it on the App store" src="./template/appstore-badge.png" height="40px">
+                        </a>
+                        <a href="https://play.app.goo.gl/?link=https://play.google.com/store/apps/details?id=com.hero.eth&amp;ddl=1&amp;pcampaignid=ddl_1" style="text-decoration: none;">
+                            <img class="buttons" alt="Get it on Google Play" src="https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png" height="60px">
+                        </a>
+                    </div>
                 </div>
                 <div class="feature-image"><img src="./template/app-eth.png" width="341" alt="" class="image-2" /></div>
-            </div> -->
+            </div>
             <div class="feature-wrap reverse">
                 <div
                     data-w-id="cafe0045-d304-79d9-8f68-af3adaed06e9"
@@ -113,8 +126,8 @@
                 >
                     <div class="title">Manage your Fridge</div>
                     <h2 class="black-text">Fridge Hero</h2>
-                    <p>Are you fed up with a cluttered, disorganized fridge? Do you dread the task of tossing all the fuzzy blue remnants of your favorite foods? Embarrassed about your contributions to the landfill? Horrified by the amount of money you are literally throwing in the trash? (In case you’re wondering, research suggests that’s over $1700 per household each year!)</p>
-                    <p>Become a FRIDGE HERO today! Keeping track of your fridge has never been easier – bet you can do it in less than three minutes a day! It will leave you feeling better organized, less stressed about meal planning, and free up some extra cash.</p>
+                    <p>Are you fed up with a cluttered, disorganized fridge?</p>
+                    <p>Become a FRIDGE HERO today! Keeping track of your fridge has never been easier!</p>
                     <div>            
                         <a href="https://itunes.apple.com/app/id1462463253" style="text-decoration: none;">
                             <img class="iosButton" alt="Download it on the App store" src="./template/appstore-badge.png" height="40px">
