--- a/privacy.html
+++ b/privacy.html
@@ -28,7 +28,7 @@
 
 <p>If you choose to use our Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that we collect is used for providing and improving the Service. We will not use or share your information with anyone except as described in this Privacy Policy.</p>
 
-<p>The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible at Fridge Hero unless otherwise defined in this Privacy Policy.</p>
+<p>The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible at Limping Turtle unless otherwise defined in this Privacy Policy.</p>
 
 <h2 class="black" id="information-collection-and-use">Information Collection and Use</h2>
 
